fix groups double header, remove border, stretch blue gradient

--- a/frontend/styles/components/content.css
+++ b/frontend/styles/components/content.css
@@ -1,5 +1,4 @@
 .Content {
-  border: 1px solid lightgray;
   margin-bottom: 30px;
   margin-top: 30px;
 }
